adds query params to some operations
