# src/flaskr/controllers/users_controller.py
@@ -2,14 +2,7 @@ from src.flaskr.models.user_model import User, UserSchema
 
 
 def users__get__list(request):
-    return [
-        {
-            "username": "user1",
-        },
-        {
-            "username": "user2",
-        },
-    ]
+    return 'request with query param "minRank" set to ' + request.args.get('minRank')
 
 
 def users__post__create(request):
