# src/flaskr/static/openapi.json
@@ -20,6 +20,26 @@
                 "summary": "List all users",
                 "description": "Returns a list of all users that have been created on the server.",
                 "operationId": "users__get__list",
+                "parameters": [
+                    {
+                        "name": "minRank",
+                        "in": "query",
+                        "description": "The minimum rank of the users to return",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "maxRank",
+                        "in": "query",
+                        "description": "The maximum rank of the users to return",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "A list of all users where succesfully provided",
@@ -148,6 +168,17 @@
                 "summary": "List all games",
                 "description": "Returns a list of all the games on the server",
                 "operationId": "games__get__list",
+                "parameters": [
+                    {
+                        "name": "username",
+                        "in": "query",
+                        "description": "Return only games in which the user with this username participates",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation. Response contains a list of the states of all games on the server",
